Fix cases where a test that was converted to JUnit 5 was still using JUnit 4 assertion APIs.